--- a/home/home.html
+++ b/home/home.html
@@ -3,12 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="../src/css/style.css">
+    <link
+     rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../javascript/javascript.js"></script>
     <title>Home | Amorim</title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">AMORIM</div>
+        <ul class="nav-links-desktop">
 
-    <script src="../src/javascript/javascript.js"></script>
+            <li>
+                <a class="rotacionar1" href="#"><i class="fa-solid fa-house"></i>
+                Home
+                </a>
+            </li>
+
+            <li>
+                <a href="#"><i class="fa-solid fa-circle-exclamation"></i>
+                Sobre Mim
+                </a>
+            </li>
+
+            <li>
+                <a class="rotacionar3" href="#"><i class="fa-solid fa-globe"></i>
+                Projetos
+                </a>
+            </li>
+
+        </ul>
+
+        <div class="mobile-menu" id="mobileMenu">
+            <button class="close" id="closeButton">
+                <i class="fa-solid fa-times"></i>
+            </button>
+            <ul class="nav-links-mobile">
+                
+            <li>
+                <a href="#"><i class="fa-solid fa-house"></i>
+                Home
+                </a>
+            </li>
+
+            <li>
+                <a href="#"><i class="fa-solid fa-circle-exclamation"></i>
+                Sobre Mim
+                </a>
+            </li>
+
+            <li>
+                <a href="#"><i class="fa-solid fa-globe"></i>
+                Projetos
+                </a>
+            </li>
+
+            </ul>
+        </div>
+        <button class="hamburger" id="hamburgerButton">
+            <i class="fas fa-bars"></i>
+        </button>
+    </nav>
+
+    <div class="container">
+        <h1>Seja Bem-Vindo!</h1>
+        <button>Randola</button>
+    </div>
 </body>
 </html>
