--- a/home/home.html
+++ b/home/home.html
@@ -9,51 +9,55 @@
     <title>Home | Amorim</title>
 </head>
 <body>
-    <nav class="navbar">
-        <span class="amorim">
-            Amorim
-        </span>
+    <nav id="navbar">
+        <div id="nav-content">
+            <span class="amorim">
+                Amorim
+            </span>
+        </div>
         <ul id="nav-items">
 
             <li class="nav-item">
                 <a href="#">
-                    <i class="fa-solid fa-house"></i>
-                    <span class="nav-description">
-                        Home
-                    </span>
+                    <i class="fa-solid fa-house">
+                        <span class="nav-description">
+                            Home
+                        </span>
+                    </i>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a href="#">
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    <span class="nav-description">
-                        Sobre Mim
-                    </span>
+                    <i class="fa-solid fa-circle-exclamation">
+                        <span class="nav-description">
+                            Sobre Mim
+                        </span>
+                    </i>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a href="#">
-                    <i class="fa-solid fa-globe"></i>
-                    <span class="nav-description">
-                        Projetos
-                    </span>
+                    <i class="fa-solid fa-globe">
+                        <span class="nav-description">
+                            Projetos
+                        </span>
+                    </i>
                 </a>
             </li>
         </ul>
 
         <button id="open_btn">
-            <i id="open_btn_icon" class="fa-solid fa-chevron-right"></i>
+            <i id="open_btn_icon" class="fa-solid fa-bars"></i>
         </button>
         </div>
 
         <div id="logout">
             <button id="logout_btn">
-                <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                <span class="item-description">
+                <i class="fa-solid fa-arrow-right-from-bracket"><span class="nav-description">
                     Logout
-                </span>
+                </span></i>
             </button>
         </div>
     </nav>
