--- a/home/home.html
+++ b/home/home.html
@@ -10,7 +10,33 @@
 </head>
 <body>
     <nav id="navbar">
-        
+
+        <ul id="nav-items">
+
+            <li class="nav-item">
+                <a class="item-descriptions" href="#">
+                    <span class="item-description">
+                    Home
+                </span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="item-descriptions" href="#">
+                <span class="item-description">
+                    Sobre Mim
+                </span>
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a class="item-descriptions" href="#">
+                    <span class="item-description">
+                        Projetos
+                    </span>
+                </a>
+            </li>
+        </ul>
     </nav>
 </body>
 </html>
